Updated index and volunteer pages with 2020 info

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <div class="card-stacked">
             <div class="card-content #00acc1 cyan darken-2 white-text center">
             <h5>
-              Date:  Saturday, February 16, 2019 <br>
+              Date:  Saturday, February 29th, 2020 <br>
 
               <br>
 
@@ -141,7 +141,7 @@
           * A credit/debit card is needed to be able to register online. *
       </p>
         <!-- INSERT Eventbrite REGISTRATION LINK HERE -->
-        <a href="https://www.eventbrite.com/e/intro-girls-to-engineering-2019-tickets-54266659038" target="_blank" id="download-button" class="btn-large waves-effect waves-light #00bfa5 teal accent-4"><i class="material-icons right">edit</i>Register Online</a>
+        <a href="https://www.eventbrite.com/e/intro-girls-to-engineering-2020-tickets-89188562391" target="_blank" id="download-button" class="btn-large waves-effect waves-light #00bfa5 teal accent-4"><i class="material-icons right">edit</i>Register Online</a>
       </div>
       <div class="row center">
       <p>
@@ -150,11 +150,11 @@
               After that, openings may occur if we have cancellations.  <br> We do not maintain a Wait List.<br>
               If openings come up it will be posted on the  <a href="https://www.facebook.com/SWESCOutreach/" target="_blank">Education Outreach Facebook page.</a></i>
      <h5> <b>Register by mail instructions: </b> <br> </h5>
-      Download and print this <a href="http://www.swe-sc.org/IGEW/RegistrationForm19.pdf" target="_blank">registration form</a>. <br>
+      Download and print this <a href="https://swe-sc.org/IGEW/IGEWRegForm.pdf" target="_blank">registration form</a>. <br>
       A parent sign the form and mail it in, post marked no later than Feb. 1st with a check. <br>
         Pre-Registration is required no later than Feb 1, 2019.<br><br>
       <i>Can't afford the $30 fee?</i><br> 
-      Request a need-based <a href="https://form.jotform.com/80596535506160" target="_blank">fee waiver here</a>. <br>
+      Request a need-based <a href="https://form.jotform.com/200088235283149" target="_blank">fee waiver here</a>. <br>
         </p>
 
       </div>
@@ -223,8 +223,8 @@
 
         <tbody>
         <tr>
-          <td>3D Me: The Future of Manufacturing Body Parts</td>
-          <td>Learn how scanners and 3D printers can turn you into an avatar and build your dream ideas into reality!</td>
+          <td>Seismic Shakeup</td>
+          <td>Can you design a structure that will survive an earthquake? Put your design skills to the test on our shaker table!</td>
         </tr>
         <tr>
           <td>Design a Lunar Lander</td>
@@ -309,8 +309,9 @@
           <td>Can you design and build an egg bungee jump that will keep the egg from breaking?</td>
         </tr>
         <tr>
-          <td>Bridges</td>
-          <td>Engineers and architects designed the famous Brooklyn Bridge, Golden Gate Bridge, London Bridge, and others. Find out about civil engineering as you design and test your own bridge!</td>
+          <td>Code Breakers</td>
+          <td>Want to tell someone a secret, and make sure no one else understands it? Try to design a code that can’t be cracked in this hands-on Intro to Cybersecurity, where the best hacker wins!
+          </td>
         </tr>
         <tr>
           <td>Zip Lines</td>
@@ -321,8 +322,8 @@
           <td>Like roller coasters? This is your chance to be the mechanical engineer that designs and builds one!</td>
         </tr>
         <tr>
-          <td>Gears and Spinners</td>
-          <td>Learn about how gears work in a spinner while you make a spinner of your own.</td>
+          <td>Kick it!</td>
+          <td>Can you outscore Megan Rapinoe and Alex Morgan? Try to score a goal - by building a machine!</td>
         </tr>
         </tbody>
       </table>
