--- a/volunteer.html
+++ b/volunteer.html
@@ -66,7 +66,7 @@
           <div class="card-stacked">
             <div class="card-content #00acc1 cyan darken-2 white-text center">
             <h5>
-                Date: Saturday, February 16, 2019 <br>
+                Date: Saturday, February 29th, 2020 <br>
 
               <br>
 
@@ -92,6 +92,7 @@
     </div>
   </div>
   <!--   End Location   -->
+ 
 
   <!--   Bullet Points   -->
   <div class="container">
@@ -170,7 +171,7 @@
     <div class="card #d1c4e9 deep-purple lighten-4">
       <div class="card-stacked">
         <div class="card-content">
-        <p><b>Volunteer Roles & Responsibilities</b></p>
+        <p id="Roles"><b>Volunteer Roles & Responsibilities</b></p>
             <ul class="collection">
               <li class="collection-item">
               
@@ -240,7 +241,7 @@
       <div class="row center">
   
         <!-- INSERT Eventbrite REGISTRATION LINK HERE -->
-        <a href="https://www.eventbrite.com/e/igew-volunteer-2019-tickets-54267913791" target="_blank" id="download-button" class="btn-large waves-effect waves-light #00bfa5 teal accent-4"><i class="material-icons right">edit</i>Register to Volunteer</a>
+        <a href="https://www.eventbrite.com/e/igew-volunteer-2020-tickets-89659970385" target="_blank" id="download-button" class="btn-large waves-effect waves-light #00bfa5 teal accent-4"><i class="material-icons right">edit</i>Register to Volunteer</a>
       </div>
           <div class="row center">
             Volunteer registration closes on February 6th 
@@ -302,8 +303,8 @@
 
         <tbody>
         <tr>
-          <td>3D Me: The Future of Manufacturing Body Parts</td>
-          <td>Learn how scanners and 3D printers can turn you into an avatar and build your dream ideas into reality!</td>
+          <td>Seismic Shakeup</td>
+          <td>Can you design a structure that will survive an earthquake? Put your design skills to the test on our shaker table!</td>
         </tr>
         <tr>
           <td>Design a Lunar Lander</td>
@@ -388,8 +389,9 @@
           <td>Can you design and build an egg bungee jump that will keep the egg from breaking?</td>
         </tr>
         <tr>
-          <td>Bridges</td>
-          <td>Engineers and architects designed the famous Brooklyn Bridge, Golden Gate Bridge, London Bridge, and others. Find out about civil engineering as you design and test your own bridge!</td>
+          <td>Code Breakers</td>
+          <td>Want to tell someone a secret, and make sure no one else understands it? Try to design a code that can’t be cracked in this hands-on Intro to Cybersecurity, where the best hacker wins!
+          </td>
         </tr>
         <tr>
           <td>Zip Lines</td>
@@ -400,8 +402,8 @@
           <td>Like roller coasters? This is your chance to be the mechanical engineer that designs and builds one!</td>
         </tr>
         <tr>
-          <td>Gears and Spinners</td>
-          <td>Learn about how gears work in a spinner while you make a spinner of your own.</td>
+          <td>Kick it!</td>
+          <td>Can you outscore Megan Rapinoe and Alex Morgan? Try to score a goal - by building a machine!</td>
         </tr>
         </tbody>
       </table>
