--- a/index.html
+++ b/index.html
@@ -145,21 +145,21 @@
       </div>
       <div class="row center">
       <p>
-      <i>Registration deadline is February 1st, 2019</i><br>
+      <i>Registration deadline is February 14th, 2020.</i><br>
           <i>Registration will close early when all the slots fill.
               After that, openings may occur if we have cancellations.  <br> We do not maintain a Wait List.<br>
               If openings come up it will be posted on the  <a href="https://www.facebook.com/SWESCOutreach/" target="_blank">Education Outreach Facebook page.</a></i>
      <h5> <b>Register by mail instructions: </b> <br> </h5>
       Download and print this <a href="https://swe-sc.org/IGEW/IGEWRegForm.pdf" target="_blank">registration form</a>. <br>
-      A parent sign the form and mail it in, post marked no later than Feb. 1st with a check. <br>
-        Pre-Registration is required no later than Feb 1, 2019.<br><br>
+      A parent sign the form and mail it in, post marked no later than Feb. 14 with a check. <br>
+        Pre-Registration is required no later than Feb 14, 2020.<br><br>
       <i>Can't afford the $30 fee?</i><br> 
       Request a need-based <a href="https://form.jotform.com/200088235283149" target="_blank">fee waiver here</a>. <br>
         </p>
 
       </div>
       <br>
-      <b>Cancellation & Refunds:</b>  We can only refund money for cancellations made prior to Feb. 1.  After that, you may send a substitute provided she has a signed consent form and we are notified by Feb. 1st.
+      <b>Cancellation & Refunds:</b>  We can only refund money for cancellations made prior to Feb. 14.  After that, you may send a substitute provided she has a signed consent form and we are notified by Feb. 14.
 
 
       <br>
