--- a/volunteer.html
+++ b/volunteer.html
@@ -92,7 +92,7 @@
     </div>
   </div>
   <!--   End Location   -->
- 
+
 
   <!--   Bullet Points   -->
   <div class="container">
@@ -128,7 +128,7 @@
 
               <li class="collection-item">
               
-                <p><i class="material-icons">chevron_right</i> There will be a volunteer training meeting <b>required for workshop leaders</b> and encouraged for first time volunteers on Saturday Feb 2 in Cocoa Beach. More details will be announced.
+                <p><i class="material-icons">chevron_right</i> There will be a volunteer training meeting <b>required for workshop leaders</b> and encouraged for first time volunteers on Feb 8 in Cape Canaveral. More details will be announced.
                 </p>
               </li>
 
@@ -244,7 +244,7 @@
         <a href="https://www.eventbrite.com/e/igew-volunteer-2020-tickets-89659970385" target="_blank" id="download-button" class="btn-large waves-effect waves-light #00bfa5 teal accent-4"><i class="material-icons right">edit</i>Register to Volunteer</a>
       </div>
           <div class="row center">
-            Volunteer registration closes on February 6th 
+            Volunteer registration closes on February 14th 
           </div>
       <br>
 
