--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@
   </div>
 <!--   Bullet Points   -->
 
+  <div class="row center">
+    <h5> <b><i>Registration is now closed. </i></b> <br> </h5>
+  </div>
+
 <!--   Location   -->
 
   <div class="container">
@@ -141,7 +145,7 @@
           * A credit/debit card is needed to be able to register online. *
       </p>
         <!-- INSERT Eventbrite REGISTRATION LINK HERE -->
-        <a href="https://www.eventbrite.com/e/intro-girls-to-engineering-2020-tickets-89188562391" target="_blank" id="download-button" class="btn-large waves-effect waves-light #00bfa5 teal accent-4"><i class="material-icons right">edit</i>Register Online</a>
+        <a href="" target="_blank" id="download-button" class="btn-large waves-effect waves-light #00bfa5 teal accent-4"><i class="material-icons right">edit</i>Registration Closed</a>
       </div>
       <div class="row center">
       <p>
